Finish initial setup for image

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
   </head>
   <body>
     <div id="app">
+      <div class="card-container">
+        <img
+          class="card-image"
+          src="https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+          alt="leaf in a verdant place" />
+        <div class="card-body">
+          <p>
+            Photo by
+            <a
+              href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+              >Halie West</a
+            >
+            on
+            <a
+              href="https://unsplash.com/photos/25xggax4bSA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+              >Unsplash</a
+            >
+          </p>
+        </div>
+      </div>
       <form
         action="/mybackend/sign-up"
         method="post">
